add plotly assignment

--- a/docs/templates/assignment-1/DV-Assignment1-Firstname-Lastname-PartA.html
+++ b/docs/templates/assignment-1/DV-Assignment1-Firstname-Lastname-PartA.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Your Name Here">
-<meta name="dcterms.date" content="2025-09-23">
+<meta name="dcterms.date" content="2025-09-26">
 
-<title>BDS Toolbox: DV Assignmnet 1 Part 1 – Data Visualization 2025</title>
+<title>BDS Toolbox: DV Assignment 1 Part 1 – Data Visualization 2025</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -188,6 +188,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
   <ul class="collapse">
   <li><a href="#setup-environment" id="toc-setup-environment" class="nav-link active" data-scroll-target="#setup-environment">Setup environment</a></li>
   <li><a href="#a.-replicate-this-plot" id="toc-a.-replicate-this-plot" class="nav-link" data-scroll-target="#a.-replicate-this-plot">A. Replicate this plot</a></li>
+  <li><a href="#a.-replicate-this-plot-1" id="toc-a.-replicate-this-plot-1" class="nav-link" data-scroll-target="#a.-replicate-this-plot-1">A. Replicate this plot</a></li>
   <li><a href="#b.-interactive-visualizations-with-plotly" id="toc-b.-interactive-visualizations-with-plotly" class="nav-link" data-scroll-target="#b.-interactive-visualizations-with-plotly">B. Interactive visualizations with plotly</a></li>
   </ul>
 </nav>
@@ -197,7 +198,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">BDS Toolbox: DV Assignmnet 1 Part 1</h1>
+<h1 class="title">BDS Toolbox: DV Assignment 1 Part 1</h1>
 </div>
 
 
@@ -214,7 +215,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 23, 2025</p>
+      <p class="date">September 26, 2025</p>
     </div>
   </div>
   
@@ -273,8 +274,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <span id="cb2-24"><a href="#cb2-24" aria-hidden="true" tabindex="-1"></a>con <span class="ot">&lt;-</span> oefenwebDatabase<span class="sc">::</span><span class="fu">connect</span>()</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
 </section>
-<section id="retreive-data" class="level3">
-<h3 class="anchored" data-anchor-id="retreive-data">Retreive data</h3>
+</section>
+<section id="a.-replicate-this-plot-1" class="level2">
+<h2 class="anchored" data-anchor-id="a.-replicate-this-plot-1">A. Replicate this plot</h2>
+<section id="retrieve-data" class="level3">
+<h3 class="anchored" data-anchor-id="retrieve-data">Retrieve data</h3>
 <p><em>… add more code chunks as needed. </em></p>
 </section>
 <section id="create-plot" class="level3">
@@ -283,8 +287,11 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="b.-interactive-visualizations-with-plotly" class="level2">
 <h2 class="anchored" data-anchor-id="b.-interactive-visualizations-with-plotly">B. Interactive visualizations with plotly</h2>
-<section id="plot" class="level3">
-<h3 class="anchored" data-anchor-id="plot">Plot</h3>
+<section id="retrieve-data-1" class="level3">
+<h3 class="anchored" data-anchor-id="retrieve-data-1">Retrieve data</h3>
+</section>
+<section id="create-interactive-plot" class="level3">
+<h3 class="anchored" data-anchor-id="create-interactive-plot">Create interactive plot</h3>
 
 
 </section>
