--- a/docs/templates/assignment-1/DV-Assignment1-GroupX-PartB.html
+++ b/docs/templates/assignment-1/DV-Assignment1-GroupX-PartB.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Group X; Names:">
-<meta name="dcterms.date" content="2025-09-25">
+<meta name="dcterms.date" content="2025-09-26">
 
-<title>BDS Toolbox: DV Assignmnet 1 Part 2 – Data Visualization 2025</title>
+<title>BDS Toolbox: DV Assignment 1 Part 2 – Data Visualization 2025</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -198,7 +198,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">BDS Toolbox: DV Assignmnet 1 Part 2</h1>
+<h1 class="title">BDS Toolbox: DV Assignment 1 Part 2</h1>
 </div>
 
 
@@ -215,7 +215,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 25, 2025</p>
+      <p class="date">September 26, 2025</p>
     </div>
   </div>
   
