--- a/docs/templates/assignment-1/DV-Assignment1-Firstname-Lastname-PartA.html
+++ b/docs/templates/assignment-1/DV-Assignment1-Firstname-Lastname-PartA.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Your Name Here">
-<meta name="dcterms.date" content="2025-09-30">
+<meta name="dcterms.date" content="2025-10-02">
 
 <title>BDS Toolbox: DV Assignment 1 Part 1 – Data Visualization 2025</title>
 <style>
@@ -157,6 +157,10 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
  <span class="dropdown-text">Working with Git</span></a>
   </li>  
         <li>
+    <a class="dropdown-item" href="../../documents/ggplotly-handout.qmd">
+ <span class="dropdown-text">ggplotly</span></a>
+  </li>  
+        <li>
     <a class="dropdown-item" href="https://socviz.co/">
  <span class="dropdown-text">Data Visualization: A Practical Introduction (Healy)</span></a>
   </li>  
@@ -215,7 +219,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 30, 2025</p>
+      <p class="date">October 2, 2025</p>
     </div>
   </div>
   
