render plotly html

--- a/docs/templates/assignment-2/your-project-name/report/DV-Assignment2-GroupX.html
+++ b/docs/templates/assignment-2/your-project-name/report/DV-Assignment2-GroupX.html
@@ -121,6 +121,11 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Working with Git</span></a>
   </li>  
         <li>
+    <a class="dropdown-item" href="../../../../documents/plotly_2025.html">
+ <span class="dropdown-text"></span></a>
+  </li>  
+        <li class="dropdown-header">ggplotly</li>
+        <li>
     <a class="dropdown-item" href="https://socviz.co/">
  <span class="dropdown-text">Data Visualization: A Practical Introduction (Healy)</span></a>
   </li>  
